Add toolbar + inspect button above props side pane.

--- a/views/devpanel.html
+++ b/views/devpanel.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="../blink/Source/devtools/front_end/inspectorCommon.css">
     <link rel="stylesheet" type="text/css" href="../blink/Source/devtools/front_end/inspectorSyntaxHighlight.css">
     <link rel="stylesheet" type="text/css" href="../blink/Source/devtools/front_end/popover.css">
+    <link rel="stylesheet" type="text/css" href="devpanel.css">
 
     <script src="../blink/Source/devtools/front_end/inspector.js"></script>
 
@@ -44,6 +45,7 @@
     <script src="../blink/Source/devtools/front_end/SidebarView.js"></script>
     <script src="../blink/Source/devtools/front_end/SidebarTreeElement.js"></script>
 
+    <script src="../blink/Source/devtools/front_end/StatusBarButton.js"></script>
 
     <script src="../blink/Source/devtools/front_end/Popover.js"></script>
     <script src="../blink/Source/devtools/front_end/SuggestBox.js"></script>
