Fix missing sidebar in Chrome 34 and later
See #29.

I updated blink-devtools to the latest (requires sebmarkbage/blink-devtools#1) and did a manual merge, changing ReactPanel.js to match all changes that happened to ElementPanel.js since the last devtools version.

I'm not sure we actually want to continue tracking the latest devtools; we could presumably keep an old version of the panels and just fix the specific problem with the removed SidebarView.

This doesn't actually work properly yet due to some style-related bug; when the panel is rendered, the View components read all of their dimensions as 0, then 0 is set as the actual width and height of each element, causing nothing to display. However, if the script debugger is used within `ReactPanel.show` to inspect `this.element` (but not to change any properties on it), then the panel seems to display correctly. I'm not sure how to go about fixing this. I can look more later, but if anyone has ideas here I'd appreciate it.

--- a/views/devpanel.html
+++ b/views/devpanel.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="../blink/Source/devtools/front_end/inspectorCommon.css">
     <link rel="stylesheet" type="text/css" href="../blink/Source/devtools/front_end/inspectorSyntaxHighlight.css">
     <link rel="stylesheet" type="text/css" href="../blink/Source/devtools/front_end/popover.css">
+    <link rel="stylesheet" type="text/css" href="../blink/Source/devtools/front_end/tabbedPane.css">
 
     <script src="../blink/Source/devtools/front_end/inspector.js"></script>
 
@@ -21,6 +22,7 @@
     <script src="../blink/Source/devtools/front_end/treeoutline.js"></script>
     <script src="../blink/Source/devtools/front_end/UIString.js"></script>
     <script src="../blink/Source/devtools/front_end/Object.js"></script>
+    <script src="../blink/Source/devtools/front_end/NotificationService.js"></script>
     <script src="../blink/Source/devtools/front_end/View.js"></script>
     <script src="../blink/Source/devtools/front_end/Settings.js"></script>
 
@@ -28,6 +30,7 @@
     <script src="../blink/Source/devtools/front_end/InspectorFrontendHostStub.js"></script>
 
     <script src="../blink/Source/devtools/front_end/UIUtils.js"></script>
+    <script src="../blink/Source/devtools/front_end/Platform.js"></script>
     <script src="../blink/Source/devtools/front_end/ContextMenu.js"></script>
 
     <script src="../blink/Source/devtools/front_end/ParsedURL.js"></script>
@@ -39,9 +42,9 @@
     <script src="../blink/Source/devtools/front_end/TabbedPane.js"></script>
 
     <script src="../blink/Source/devtools/front_end/SidebarPane.js"></script>
+    <script src="../blink/Source/devtools/front_end/DOMSyntaxHighlighter.js"></script>
     <script src="../blink/Source/devtools/front_end/ElementsTreeOutline.js"></script>
     <script src="../blink/Source/devtools/front_end/SplitView.js"></script>
-    <script src="../blink/Source/devtools/front_end/SidebarView.js"></script>
     <script src="../blink/Source/devtools/front_end/SidebarTreeElement.js"></script>
 
 
@@ -68,8 +71,6 @@
 
     <script src="../blink/Source/devtools/front_end/SearchableView.js"></script>
 
-    <script src="../blink/Source/devtools/front_end/CSSNamedFlowCollectionsView.js"></script>
-    <script src="../blink/Source/devtools/front_end/CSSNamedFlowView.js"></script>
     <script src="../blink/Source/devtools/front_end/EventListenersSidebarPane.js"></script>
 
 <!-- custom scripts -->
@@ -81,8 +82,8 @@
 
 </head>
 <body class="undocked" id="-blink-dev-tools">
-    <div class="fill vbox inspector-view visible" spellcheck="false">
-        <div class="tabbed-pane vbox visible">
+    <div class="view fill root-view visible" spellcheck="false">
+        <div class="view tabbed-pane vbox visible">
             <div id="main-panel-holder" class="tabbed-pane-content scroll-target"></div>
         </div>
     </div>
