Register React DevTools with Device DevTools for mobile support

--- a/views/devpanel.html
+++ b/views/devpanel.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" type="text/css" href="../blink/Source/devtools/front_end/inspectorSyntaxHighlight.css">
     <link rel="stylesheet" type="text/css" href="../blink/Source/devtools/front_end/popover.css">
 
+    <script src="../device/Environment.js"></script>
+
     <script src="../blink/Source/devtools/front_end/inspector.js"></script>
 
     <script src="../blink/Source/devtools/front_end/utilities.js"></script>
