Place bananaslug checkbox into the React tab.

--- a/views/devpanel.html
+++ b/views/devpanel.html
@@ -89,5 +89,9 @@
         </div>
     </div>
     <script src="devpanel.js"></script>
+
+    <!-- include plugins start -->
+    <script src="../plugins/bananaslug/build/devpanel.bundle.js"></script>
+    <!-- include plugins end -->
 </body>
 </html>
