--- a/frontend/SettingsPane.css
+++ b/frontend/SettingsPane.css
@@ -1,7 +1,87 @@
-.searchInputWrapper {
+.SettingsPane {
+  display: flex;
+  flex-wrap: wrap;
+  flex-shrink: 0;
+  align-items: center;
+  position: relative;
+  background-color: var(--base01);
+  border-bottom: 1px solid var(--base03);
+}
+
+.SettingsMenuButton {
+  display: flex;
+  background: none;
+  border: none;
+  outline: none;
+  margin-right: 0.5rem;
+  color: inherit;
+}
+.SettingsMenuButton:hover {
+  color: var(--state06);
+}
+
+.SearchInputWrapper {
   position: relative;
   display: flex;
   flex-grow: 1;
   flex-shrink: 0;
   align-items: center;
+}
+
+.ClearSearchButton {
+  font-size: var(--font-size-sans-large);
+  padding: 0 0.5rem;
+  position: absolute;
+  cursor: default;
+  right: 0;
+  line-height: 28px;
+  color: var(--base02);
+}
+.ClearSearchButton:hover {
+  color: var(--base04);
+}
+
+.ActiveInspectMenuButton,
+.InspectMenuButton {
+  display: flex;
+  background: none;
+  border: none;
+  outline: none;
+  margin-left: 0.25rem;
+  color: inherit;
+}
+.InspectMenuButton:hover {
+  color: var(--state06);
+}
+.ActiveInspectMenuButton {
+  color: var(--state00);
+}
+
+.SearchIcon {
+  position: absolute;
+  display: inline-block;
+  pointer-events: none;
+  left: 0.5rem;
+  top: 0;
+  width: 1em;
+  height: 100%;
+  stroke-width: 0;
+  stroke: var(--base03);
+  fill: var(--base03);
+  line-height: 28px;
+  font-size: var(--font-size-sans-normal);
+}
+
+.Input {
+  font-size: var(--font-size-sans-normal);
+  padding: 0.25rem;
+  margin: 0.25rem;
+  margin-left: 1.75rem;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  width: 100%;
+}
+.Input:focus {
+  background-color: var(--base00);
 }
