--- a/frontend/HooksTreeView.css
+++ b/frontend/HooksTreeView.css
@@ -13,14 +13,12 @@
   line-height: 1.25rem;
 }
 
-.name {
-  color: var(--theme-special03);
-  margin: 0 0.25rem;
-}
-
+.name,
 .nameCustom {
   color: var(--theme-special03);
   margin: 0 0.25rem;
+}
+.nameCustom {
   cursor: pointer;
 }
 
